--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,10 @@ python-dateutil>=2.8
 pydantic>=2.5
 httpx>=0.26
 
+# Production
+gunicorn>=21.2
+whitenoise>=6.6
+
 # Development
 pytest>=7.4
 pytest-django>=4.7
